# ice_drift_pc_ncc

./: LICENSE  README.md  cc_bm_parallel_pyr_dev.py  cc_calc_defo.py  cc_calc_drift.py  cc_calc_drift_filter.py  cc_calc_drift_filter_git.py  cc_config.py  clip_HH_S1B_EW_GRDM_1SDH_20200301T083237_20200301T083346_020496_026D68_5471_adjusted.tif  clip_HH_S1B_EW_GRDM_1SDH_20200302T073529_20200302T073629_020510_026DD5_27F9_adjusted.tif  requirements.txt  run_drift_calculations_batch.py
batch_run/: run_alpha_batch.py  run_drift_calculations_batch.py
tools/: shp_calc_dist_az.py
tools/ERA5/: ERA5Downloader.py  ERA5ForTiff.py  README.py
tools/align/: AlignSAR.py  Alignment_QS.ipynb  LocationMapping.py  README.md  align.py  plotGeolocationPoints.py  tiff_areas.py
tools/alpha_shapes/: CMakeLists.txt  README.md  alpha_to_shp_contours.py  alpha_to_shp_contours_batch.py  drift_output_to_alpha_fmt.py  filter_and_anotate_batch.sh  filter_and_anotate_json.py  main.cpp  make_attributes.py  prepare_alpha_input.py  run_alpha.py  run_alpha_batch.py  run_alpha_batch.sh
tools/animation/: make_aniamation.ipynb
tools/drift_post_processing/: README.md  drift_post_proc.py  drift_post_proc_no_np_int.py
tools/fast_ice/: README.md  fast_ice.py
tools/geolocation_grid/: LocationMapping.py  README.py  plotGeolocationPoints.py
tools/geotiff_collocation/: README.md  RasterAdjuster.py  collocate.py  cull_pairs.py  produce_index.py  s1_collocate.py  tiff_areas.py
tools/gtiff_s1_download/: gtiff_s1_download.py  temp.geojson
tools/pipeline/: execute_pipeline.sh  run_drift_alg.py  (+1 more)
(+37 files in other folders)
